# cw-starter

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  justfile
.github/workflows/: codecov.yaml  rust.yaml  wasm.yaml
contracts/contract/: Cargo.toml
contracts/contract/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/first-contract/: Cargo.toml  README.md
contracts/first-contract/examples/: schema.rs
contracts/first-contract/schema/: first-contract.json
contracts/first-contract/schema/raw/: execute.json  query.json
contracts/first-contract/src/: contract.rs  erorr.rs  lib.rs  msg.rs  multitest.rs  state.rs
schema/: first-contract.json
schema/raw/: instantiate.json  response_to_allowed_token.json
scripts/: README.md  build_schema.sh
